# KeyboardListener

./: .gitignore  Cargo.toml  Dockerfile  build.rs  config.toml  get_data.js  index.html  main.js
.github/workflows/: backend.yml  build-windows.yml  build.yml  frontend.yml
css/: components.css  layout.css
js/: config.js  get_data.js  main.js  ws.js
src/: clipboard.rs  config.rs  db.rs  get_mac_addr.rs  getter.rs  key_mapping.rs  keyboard.rs  logger.rs  main.rs  receiver.rs  websocket.rs
