[package]
name = "kbl-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.42.0", features = ["full"] }
hyper = "1.5.2"
rusqlite = { version = "0.32.1", features = ["bundled"] }
tower-http = { version = "0.6.2", features = ["cors"] }