[package]
name = "kbl-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
hyper = "1.5.2"
rusqlite = { version = "0.32.1", features = ["bundled"] }
tower-http = { version = "0.6.2", features = ["cors"] }
warp = "0.3"
futures = "0.3"