[package]
name = "kbl"
version = "0.1.0"
edition = "2021"

[dependencies]
device_query = "2.1.0"
clipboard = "0.5.0"
chrono = "0.4.39"
unicode-segmentation = "1.8"
windows = { version = "0.58.0" ,features = ["Win32_Foundation", "Win32_Security","Win32_UI_Input","Win32_UI_WindowsAndMessaging","Win32_UI_Input_KeyboardAndMouse","Win32_System_Threading"]}
lazy_static = "1.5.0"
mac_address="1.1.7"
serde = { version = "1.0.217", features = ["derive"] }
sha1 = "0.10.6"
toml = "0.8.19"
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
serde_json = "1.0.135"
tokio = { version = "1.42.0", features = ["full"] }

[build-dependencies]
winres = "0.1.12"

[[bin]]
name = "kbl"
subsystem = "windows"
